2004-02-16    <jeff@mini.nerble.net>

	* combat.cc,etc:  Keep track of wand charges.

2004-01-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* audio/Audio.cc: prevent crash when loading an invalid wave file
	* docs/xml/docs.xml: updated a bit

2004-01-30  Ryan Nunn  <colourles@users.sourceforge.net>
	* Various files : Updating version to 1.1.10cvs. That's one point one
	  point ten see vee ess. 
	* audio/Audio.cc : Fixing up resampling bias problem. Fixing up what 
	  was actually causing the high pitch voices for Windows users. Using
	  = instead of == is never good.

2004-01-27 Dominik Reichardt <dominus@users.sourceforge.net>
	* docs/xml/docs.xml,faq.xml: updated
	* docs/ReadMe.html, Faq.html: updated
	* FAQ, ReadMe: updated
	* README.MacOSX: added compile instructions as discussed ages ago on the forum

2004-01-26  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: update version to 1.1.9rc1, adjust copyright dates
	* configure.ac: remove --enable-usecode-debugger configure option

2004-01-19  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs/egg.cc: never set hatched on the Serpent Staff egg (bug#879253)

2004-01-19  Ryan Nunn  <colourles@users.sourceforge.net>
	* actors.h : Added get_sexed_coloured_shape() for fixing paperdolls and 
	  face stats always having white skin colour in serpent bond mode.
	* gumps/Paperdoll_gump.cc, gumps/Face_button.cc : Fixing serpent bond 
	  bug
	* files/utils.* : Made U7exists() return type bool.

2004-01-19  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapeid.cc: don't corrupt game palette to get special colours
	* palette.*, various: replaced update() by apply(false)

2004-01-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* game.*: added Game::has_expansion() to check for FoV/SS
	* objnames.cc: fixed SI-without-SS object names
	* files/utils.cc: made U7remove() case-insensitive
	* various: cleaning up output