@@ -68,6 +68,8 @@ protected:
 	bool can_yell;
 	int failures;			// # failures to find opponent.
 	unsigned int teleport_time;	// Next time we can teleport.
+	unsigned int dex_points;	// Need these to attack.
+
 	void start_battle();		// Play music at start of battle.
 	bool teleport();		// For monsters that can.
 	virtual void find_opponents();
